--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 <html>
   <head>
-    <title>My blog</title>
+    <meta charset="UTF-8" />
+    <title>Dev Academy Blog - Blue Pilkinton-Ching</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <link rel="stylesheet" type="text/css" href="styles/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Proza+Libre&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap"
+      rel="stylesheet"
+    />
+  </head>
   <body>
-    <h1>Kia ora Taiao! (Hello World!)</h1> 
-    <p> This is the beginning of my website home page.</p>
-    <p> It will eventually contain a list of links to all my blogs. </p>
+    <main>
+      <div class="container" id="intro">
+        <img id="pp" src="images/pp.jpeg" alt="Blue Pilkinton-Ching" />
+        <div id="title" class="container">
+          <h1>Blue PC</h1>
+          <h2>Dev Academy Blog</h2>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
