Add link to blog page. Small change to index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img id="pp" src="images/pp.jpeg" alt="Blue Pilkinton-Ching" />
         <div id="title" class="container">
           <h1>Blue PC</h1>
-          <h2>Dev Academy Blog</h2>
+          <h2>Dev Academy <a href="blog/te-houtaewa-template.html">Blog</a></h2>
         </div>
       </div>
     </main>
