Simplify and restyle page
Make #intro div virtically centered inside window

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   </head>
   <body>
     <main>
-      <div class="container" id="intro">
+      <div id="intro">
         <img id="pp" src="images/pp.jpeg" alt="Blue Pilkinton-Ching" />
-        <div id="title" class="container">
+        <div id="title">
           <h1>Blue PC</h1>
           <h2>Dev Academy <a href="blog/te-houtaewa-template.html">Blog</a></h2>
         </div>
