Add background & area for blog links

--- a/index.html
+++ b/index.html
@@ -17,12 +17,17 @@
   </head>
   <body>
     <main>
-      <div id="intro">
-        <img id="pp" src="images/pp.jpeg" alt="Blue Pilkinton-Ching" />
-        <div id="title">
-          <h1>Blue PC</h1>
-          <h2>Dev Academy <a href="blog/te-houtaewa-template.html">Blog</a></h2>
+      <div id="main-container">
+        <div id="intro">
+          <img id="pp" src="images/pp.jpeg" alt="Blue Pilkinton-Ching" />
+          <div id="title">
+            <h1>Blue PC</h1>
+            <h2>Dev Academy <a href="#blog-nav">Blog</a></h2>
+          </div>
         </div>
+      </div>
+      <div id="blog-nav">
+        <div id="blog-links"></div>
       </div>
     </main>
   </body>
