Write Blog Template

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8" />
@@ -17,7 +18,7 @@
   </head>
   <body>
     <main>
-      <div id="main-container">
+      <div id="intro-container">
         <div id="intro">
           <img id="pp" src="images/pp.jpeg" alt="Blue Pilkinton-Ching" />
           <div id="title">
@@ -27,7 +28,10 @@
         </div>
       </div>
       <div id="blog-nav">
-        <div id="blog-links"></div>
+        <div id="blog-links">
+          <h3><a href="blog/te-houtaewa-template.html">Te houteawa template</a><h3>
+          <h3><a href="blog/html-css.html">Technical Blog - CSS Concepts</a></h3>
+        </div>
       </div>
     </main>
   </body>
