--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
       </div>
       <div id="blog-nav">
         <div id="blog-links">
-          <h3><a href="blog/te-houtaewa-template.html">Te houteawa template</a><h3>
-          <h3><a href="blog/html-css.html">Technical Blog - CSS Concepts</a></h3>
+          <h3>
+            <a href="blog/te-houtaewa-template.html">Te houteawa template</a>
+          </h3>
+          <h3>
+            <a href="blog/html-css.html">Technical Blog - CSS Concepts</a>
+          </h3>
         </div>
       </div>
     </main>
