Add two more blog posts

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
           <h3>
             <a href="blog/html-css.html">Technical Blog - CSS Concepts</a>
           </h3>
+          <h3>
+            <a href="blog/identity-values.html">Identity Values & Strengths</a>
+          </h3>
+          <h3>
+            <a href="blog/learning-plan.html">Learning Plan</a>
+          </h3>
         </div>
       </div>
     </main>
