Add emotional intelligence blog post

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
           <h3>
             <a href="blog/learning-plan.html">Learning Plan</a>
           </h3>
+          <h3>
+            <a href="blog/emotional-intelligence.html"
+              >Emotional Intelligence</a
+            >
+          </h3>
         </div>
       </div>
     </main>
