Add blog for js and the DOM

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
               >Emotional Intelligence</a
             >
           </h3>
+          <h3>
+            <a href="blog/javascript-dom.html">JavaScript & the DOM</a>
+          </h3>
         </div>
       </div>
     </main>
