Add blog post for Neuroplasticity & Growth Mindset

--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
           <h3>
             <a href="blog/javascript-dom.html">JavaScript & the DOM</a>
           </h3>
+          <h3>
+            <a href="blog/neuroplasticity.html"
+              >Neuroplasticity & Growth Mindset</a
+            >
+          </h3>
         </div>
       </div>
     </main>
