Add Te Whare Tapu Wha blog post

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
               >Neuroplasticity & Growth Mindset</a
             >
           </h3>
+          <h3>
+            <a href="blog/te-whare-tapa-wha.html">Te Whare Tapa Whā</a>
+          </h3>
         </div>
       </div>
     </main>
