Reflect on problem solving

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
           <h3>
             <a href="blog/te-whare-tapa-wha.html">Te Whare Tapa Whā</a>
           </h3>
+          <h3>
+            <a href="blog/problem-solving.html">Problem Solving</a>
+          </h3>
         </div>
       </div>
     </main>
