--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
           <h3>
             <a href="blog/problem-solving.html">Problem Solving</a>
           </h3>
+          <h3>
+            <a href="blog/foundations-reflection.html"
+              >Foundations Reflection</a
+            >
+          </h3>
         </div>
       </div>
     </main>
